--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Mira - Responsive Coming Soon Template</title>
+        <title>Design:Olin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -66,9 +66,9 @@
                     <div class="row">
                         <div class="span12">
                         	<div class="logo">
-                        		<h1><a href="">Mira - Responsive Coming Soon Template</a></h1>
+                        		<h1><a href="">Design:Olin</a></h1>
                         	</div>
-                            <h2>We're coming soon</h2>
+                            <h2>A Different Kind of Hackathon</h2>
                             <p>
                             	We are working very hard on the new version of our site. 
                             	It will bring a lot of new features. Stay tuned!
@@ -319,8 +319,8 @@
                     <h4>Come visit us</h4>
                     <div class="map"></div>
                     <h4>Address</h4>
-                    <p><i class="fa fa-map-marker"></i>Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
-                    <p><i class="fa fa-phone"></i>Phone: 0039 333 12 68 347</p>
+                    <p><i class="fa fa-map-marker"></i>1000 Olin Way, Needham, MA 02492</p>
+                    <p><i class="fa fa-phone"></i>Phone: 1 (540) 209 5219</p>
                 </div>
             </div>
         </div>
@@ -330,7 +330,6 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="span7 footer-copyright">
-	                    <p>&copy; Mira Responsive Bootstrap Template<br>All rights reserved.</p>
 	                </div>
 	                <div class="span5 footer-social">
 	                    <a class="ultm ultm-facebook ultm-48 ultm-square ultm-gray-to-color" href=""></a>
