--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
                         	<div class="logo">
                         		<h1><a href="">Design:Olin</a></h1>
                         	</div>
+                            <h2>Design/Olin</h2>
                             <h2>A Different Kind of Hackathon</h2>
                             <p>
-                            	We are working very hard on the new version of our site. 
-                            	It will bring a lot of new features. Stay tuned!
+                            	We're bringing together makers of all types for 24 hours of 
+                                creativity and creation.  
                             </p>
                             <div class="timer">
                                 <div class="days-wrapper">
