--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+        <style>
+            .white {
+                color: #fff !important;
+            }
+        </style>
 
     </head>
 
@@ -118,42 +123,38 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="span12 about">
-	                    <h3>About the new site</h3>
+	                    <h3>Hello, fellow designers!</h3>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                            We all know the traditional education system has <a href='https://www.youtube.com/watch?v=zDZFcDGpL4U'>its issues</a>. <br> Join us in rethinking the way K-12 education works.  
 	                    </p>
 	                </div>
 	            </div>
 	            <div class="row">
 	                <div class="span4 about-box-1">
 	                	<div class="about-box-1-icon">
-	                		<i class="fa fa-eye"></i>
+	                		<i class="fa fa-users"></i>
 	                	</div>
-	                    <h4>New Features</h4>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
-	                    </p>
-	                </div>
-	                <div class="span4 about-box-1">
-	                	<div class="about-box-1-icon">
-	                		<i class="fa fa-table"></i>
-	                	</div>
-	                    <h4>Responsive Layout</h4>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
+	                    <h4>Design Thinking</h4>
+	                   <p>
+	                       Learn the principles of design through experience.   
 	                    </p>
 	                </div>
 	                <div class="span4 about-box-1">
 	                	<div class="about-box-1-icon">
 	                		<i class="fa fa-pencil"></i>
 	                	</div>
-	                    <h4>Flat Design</h4>
+	                    <h4>K-12 Education</h4>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
+	                       Bring fresh ideas to reinvigorate traditional education.
+	                    </p>
+	                </div>
+	                <div class="span4 about-box-1">
+	                	<div class="about-box-1-icon">
+	                		<i class="fa fa-clock-o"></i>
+	                	</div>
+	                    <h4>24 Hours</h4>
+	                    <p>
+	                    	One full day of ideation, imagination, and socialization.
 	                    </p>
 	                </div>
 	            </div>
@@ -164,7 +165,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12 testimonials">
-                    <h3>What our clients say</h3>
+                    <h3>Sponsors and Mentors</h3>
                     <div class="testimonial-active"></div>
                     <div class="testimonial-quote">&ldquo; &rdquo;</div>
                     <div class="testimonial-single">
@@ -220,6 +221,7 @@
         </div>
         
         <!-- Who's behind this -->
+        <!--
         <div class="whos-behind-container">
 	        <div class="container">
 	            <div class="row">
@@ -284,44 +286,40 @@
 	                    </p>
 	                </div>
 	            </div>
-	            <!-- Latest tweets -->
-	            <div class="row">
-	                <div class="span12 latest-tweets">
-	                    <h4>Our Latest Tweets</h4>
-	                    <p class="tweet-active"></p>
-	                    <div class="tweets"></div>
-	                </div>
-	            </div>
 	        </div>
         </div>
+        -->
+
         
         <!-- How to contact us -->
-        <div class="container">
-            <div class="row">
-                <div class="span12 contact">
-                    <h3>How to contact us</h3>
-                    <p>
-                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-                    </p>
+        <div class='whos-behind-container'>
+            <div class="container">
+                <div class="row">
+                    <div class="span12 contact">
+                        <h3 class="white">How to contact us</h3>
+                        <p class="white">
+                        	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
+    	                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="span7 contact-form">
-                    <h4>Send us a message</h4>
-                    <form method="post" action="assets/contact.php">
-                        <input type="text" name="email" placeholder="Email..." class="contact-email">
-                        <input type="text" name="subject" placeholder="Subject..." class="contact-subject">
-                        <textarea name="message" placeholder="Message..."></textarea>
-                        <button type="submit">Send</button>
-                    </form>
-                </div>
-                <div class="span5 contact-address">
-                    <h4>Come visit us</h4>
-                    <div class="map"></div>
-                    <h4>Address</h4>
-                    <p><i class="fa fa-map-marker"></i>1000 Olin Way, Needham, MA 02492</p>
-                    <p><i class="fa fa-phone"></i>Phone: 1 (540) 209 5219</p>
+                <div class="row">
+                    <div class="span7 contact-form">
+                        <h4 class="white">Send us a message</h4>
+                        <form method="post" action="assets/contact.php">
+                            <input type="text" name="email" placeholder="Email..." class="contact-email">
+                            <input type="text" name="subject" placeholder="Subject..." class="contact-subject">
+                            <textarea name="message" placeholder="Message..."></textarea>
+                            <button type="submit">Send</button>
+                        </form>
+                    </div>
+                    <div class="span5 contact-address">
+                        <h4 class="white">Come visit us</h4>
+                        <div class="map"></div>
+                        <h4 class="white">Address</h4>
+                        <p class="white"><i class="fa fa-map-marker"></i>1000 Olin Way, Needham, MA 02492</p>
+                        <p class="white"><i class="fa fa-phone"></i>Phone: 1 (540) 209 5219</p>
+                    </div>
                 </div>
             </div>
         </div>
