Modifying event text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         	</div>
                             <h2>Rethink Education</h2>
                             <p>
-                            	We're bringing together makers of all types for 2 days of creativity and creation.  Join us in re-envisioning the K-12 educational system.
+                            	We're bringing together makers of all types for 2 days of creativity and creation.  Join us at Olin College on September 13th-14th and re-envision the K-12 educational system.
                             </p>
                             <div class="timer">
                                 <div class="days-wrapper">
@@ -104,12 +104,9 @@
         <div class="container">
             <div class="row">
                 <div class="span12 subscribe">
-                    <h3>Subscribe to our newsletter</h3>
-                    <p>Sign up now to our newsletter and you'll be one of the first to know when the site is ready:</p>
-                    <form class="form-inline" action="assets/subscribe.php" method="post">
-                        <input type="text" name="email" placeholder="Enter your email...">
-                        <button type="submit" class="btn">Subscribe</button>
-                    </form>
+                    <h3>Sign up and we'll keep in touch!</h3>
+                    <p></p>
+                    <a href=''><button type="submit" class="btn">&nbsp;&nbsp;Register&nbsp;&nbsp;</button></a>
                     <div class="success-message"></div>
                     <div class="error-message"></div>
                 </div>
@@ -294,29 +291,26 @@
             <div class="container">
                 <div class="row">
                     <div class="span12 contact">
-                        <h3>How to contact us</h3>
+                        <h3>Event Summary</h3>
                         <p>
-                        	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-    	                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        	
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="span7 contact-form">
-                        <h4>Send us a message</h4>
-                        <form method="post" action="assets/contact.php">
-                            <input type="text" name="email" placeholder="Email..." class="contact-email">
-                            <input type="text" name="subject" placeholder="Subject..." class="contact-subject">
-                            <textarea name="message" placeholder="Message..."></textarea>
-                            <button type="submit">Send</button>
+                        <h4>Event Schedule</h4>
+                        <form method="post">
+
                         </form>
                     </div>
                     <div class="span5 contact-address">
-                        <h4>Come visit us</h4>
+                        <h4>Event Location</h4>
                         <div class="map"></div>
                         <h4>Address</h4>
-                        <p><i class="fa fa-map-marker"></i>1000 Olin Way, Needham, MA 02492</p>
-                        <p><i class="fa fa-phone"></i>Phone: 1 (540) 209 5219</p>
+                        <p><i class="fa fa-map-marker"></i> 1000 Olin Way, Needham, MA 02492</p>
+                        <p><i class="fa fa-phone"></i> Phone: 1 (540) 209 5219</p>
+                        <p><i class="fa fa-envelope"></i>Email: foundryboard@lists.olin.edu</p>
                     </div>
                 </div>
             </div>
@@ -329,11 +323,6 @@
 	                <div class="span7 footer-copyright">
 	                </div>
 	                <div class="span5 footer-social">
-	                    <a class="ultm ultm-facebook ultm-48 ultm-square ultm-gray-to-color" href=""></a>
-	                    <a class="ultm ultm-twitter ultm-48 ultm-square ultm-gray-to-color" href=""></a>
-	                    <a class="ultm ultm-google-plus-1 ultm-48 ultm-square ultm-gray-to-color" href=""></a>
-	                    <a class="ultm ultm-dribbble ultm-48 ultm-square ultm-gray-to-color" href=""></a>
-	                    <a class="ultm ultm-pinterest ultm-48 ultm-square ultm-gray-to-color" href=""></a>
 	                </div>
 	            </div>
 	        </div>
