remove php file and add event schedule

--- a/index.html
+++ b/index.html
@@ -300,9 +300,24 @@
                 <div class="row">
                     <div class="span7 contact-form">
                         <h4>Event Schedule</h4>
-                        <form method="post">
-
-                        </form>
+                        <h3>Saturday</h3>
+                        <li>8:30 - 9:30: Breakfast and check in</li>
+                        <li>9:30 - 10:00: Welcome and orientation</li>
+                        <li>10:00 - 10:30: Design phase 1 kickoff</li>
+                        <li>10:30 - 3:30: Design phase 1 work time</li>
+                        <li>11:30 - 2:00: Lunch</li>
+                        <li>3:30 - 4:00: Design phase 2 kickoff</li>
+                        <li>5:00 - 7:00: Dinner</li>
+                        <li>4:00 - 9:00: Design phase 2 work time</li>
+                        <h3>Sunday</h3>
+                        <li>9:00 - 10:00: Breakfast and check in</li>
+                        <li>10:00 - 10:30: Design phase 3 kickoff</li>
+                        <li>10:30 - 2:00: Design phase 3 work time</li>
+                        <li>11:30 - 2:00: Lunch</li>
+                        <li>2:30 - 4:00: Presentations</li>
+                        <li>4:00 - 4:30: Reflections</li>
+                        <li>4:30 - 5:00: Awards</li>
+                        <li>5:00 - 6:00: Mixer</li>
                     </div>
                     <div class="span5 contact-address">
                         <h4>Event Location</h4>
