--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 		<!-- Top menu -->
 		<nav>
 			<a class="menu-top" href="">Top</a>
-			<a class="menu-subscribe" href="">Subscribe</a>
-			<a class="menu-project" href="">The project</a>
-			<a class="menu-testimonials" href="">Testimonials</a>
-			<a class="menu-about-us" href="">About us</a>
-			<a class="menu-contact" href="">Contact</a>
+			<a class="menu-subscribe" href="">Register</a>
+			<a class="menu-project" href="">About</a>
+			<a class="menu-sponsors" href="">Sponsors</a>
+			<a class="menu-mentors" href="">Mentors</a>
+			<a class="menu-summary" href="">Event Summary</a>
 			<div class="hide-menu">
 				<a href="" rel="tooltip" data-placement="bottom" data-original-title="Hide menu">
 					<i class="fa fa-bars"></i>
@@ -162,7 +162,7 @@
         <div class="whos-behind-container black-text">
             <div class="container">
                 <div class="row">
-                    <div class="span12 whos-behind">
+                    <div class="span12 whos-behind sponsors">
                         <h3>Sponsors</h3>
                         <p>
                             A huge thanks to the organizations making this weekend possible.
@@ -230,7 +230,7 @@
         <div class="whos-behind-container image-background">
 	        <div class="container">
 	            <div class="row">
-	                <div class="span12 whos-behind">
+	                <div class="span12 whos-behind mentors">
 	                    <h3>Mentors</h3>
 	                    <p>
 	                    	We've brought some of the greater Boston area's best designers to help you along your way.
