Make down arrow work

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	                	</div>
 	                    <h4>K-12 Education</h4>
 	                    <p>
-	                       Learning is more than lectures and textbooks.  Bring fresh ideas to reinvigorate re-envision traditional education.
+	                       Learning is more than lectures and textbooks.  Bring fresh ideas to re-envision traditional education.
 	                    </p>
 	                </div>
 	                <div class="span4 about-box-1">
