--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         <h4>Address</h4>
                         <p><i class="fa fa-map-marker"></i> 1000 Olin Way, Needham, MA 02492</p>
                         <p><i class="fa fa-phone"></i> Phone: 1 (540) 209 5219</p>
-                        <p><i class="fa fa-envelope"></i>Email: foundryboard@lists.olin.edu</p>
+                        <p><i class="fa fa-envelope"></i>Email: olin.rethink@gmail.com</p>
                     </div>
                 </div>
             </div>
