--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 			<a class="menu-project" href="">About</a>
 			<a class="menu-sponsors" href="">Sponsors</a>
 			<a class="menu-mentors" href="">Mentors</a>
-			<a class="menu-summary" href="">Event Summary</a>
+            <a class="menu-phases" href="">Phases</a>
+			<a class="menu-summary" href="">Summary</a>
 			<div class="hide-menu">
 				<a href="" rel="tooltip" data-placement="bottom" data-original-title="Hide menu">
 					<i class="fa fa-bars"></i>
@@ -181,7 +182,7 @@
                             </div>
                         </div>
                         <h4>John Doe</h4>
-                        <h5>Developer</h5>
+                        <h5 class='black-text'>Developer</h5>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
                             labore et.
@@ -189,7 +190,7 @@
                     </div>
                     <div class="span4 whos-behind-box-1">
                         <div class="whos-behind-photo">
-                            <img src="assets/img/team/2.jpg" alt="">
+                            <img src="assets/img/team/foundry.jpeg" alt="">
                             <div class="whos-behind-social">
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -197,11 +198,10 @@
                                 <a href=""><i class="fa fa-envelope"></i></a>
                             </div>
                         </div>
-                        <h4>Tim Brown</h4>
-                        <h5>Founder</h5>
+                        <h4>Olin Foundry</h4>
+                        <h5 class='black-text'>Student Entrepreneurship Organization</h5>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-                            labore et.
+                            Working to foster and promote entrepreneurship at Olin College of Engineering through education, experience, and employment opportunities.
                         </p>
                     </div>
                     <div class="span4 whos-behind-box-1">
@@ -215,7 +215,7 @@
                             </div>
                         </div>
                         <h4>Sarah Red</h4>
-                        <h5>Designer</h5>
+                        <h5 class='black-text'>Designer</h5>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
                             labore et.
@@ -292,6 +292,100 @@
 	            </div>
 	        </div>
         </div>
+
+        <div class="whos-behind-container black-text phases">
+            <div class="container">
+                <div class="row">
+                    <div class="span12 whos-behind sponsors">
+                        <h3>Design Phases</h3>
+                        <p>
+                            From casual conversations to final presentations.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="span4 about-box-1"> 
+                        <div class="about-box-1-icon">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                        <h4>Empathize</h4>
+                       <p>
+                           Gain a deeper understanding of the people of the people you're designing for. Learn what needs and values they hold, and identify areas of opportunity for improving their lives. 
+                        </p>
+                    </div>
+                    <div class="span4 about-box-1">
+                        <div class="about-box-1-icon">
+                            <i class="fa fa-pencil-square-o"></i>
+                        </div>
+                        <h4>Conceptualize</h4>
+                        <p>
+                           Using what you learned from your interactions with students and teachers, build on the areas of opportunities to generate a wide range of possible solutions. Then narrow down the pool to a few promising concepts. 
+                        </p>
+                    </div>
+                    <div class="span4 about-box-1">
+                        <div class="about-box-1-icon">
+                            <i class="fa fa-tasks"></i>
+                        </div>
+                        <h4>Develop</h4>
+                        <p>
+                            Select a final idea to pursue and flush out the details of your concept, then prepare to communicate your idea to the world.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+                <!-- About the new site -->
+                <div class="about-container">
+                    <div class="container">
+                        <div class="row">
+                            <div class="span12 about">
+                                <h3>FAQ</h3>
+                                <p>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="span4 about-box-1">
+                                <h4>What's the cost?</h4>
+                                <p>
+                                   The event is completely free to attend. We'll even feed you and help out with transportation!
+                                </p>
+                            </div>
+                            <div class="span4 about-box-1">
+                                <h4>Why design for education?</h4>
+                                <p>
+                                   Olin College was founded 10 years ago with the goal of revolutionizing engineering education, and we'd like to spread that spirit of educational experimentation.
+                                </p>
+                            </div>
+                            <div class="span4 about-box-1">
+                                <h4>How can I get to Olin?</h4>
+                                <p>
+                                   If you can't drive to 1000 Olin Way, Needham, MA, we will be running a shuttle to and from the Eliot T Station (Green D Line).
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="span4 about-box-1">
+                                <h4>Do I need a team?</h4>
+                                <p>
+                                   Nope!  We'll be sending out a preregistration survey to set up teams of people with diverse backgrounds and abilities.
+                                </p>
+                            </div>
+                            <div class="span4 about-box-1">
+                                <h4>Who can participate?</h4>
+                                <p>
+                                   The event is for current undergraduate students, but we're also currently looking for professional designers, K-12 students, and teachers to help make the event possible.
+                                </p>
+                            </div>
+                            <div class="span4 about-box-1">
+                                <h4>How large will the event be?</h4>
+                                <p>
+                                   We're planning for around 100 undergraduate students.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         
 
         
@@ -312,8 +406,8 @@
                         <h3>Saturday</h3>
                         <li>8:30 - 9:30: Breakfast and check in</li>
                         <li>9:30 - 10:00: Welcome and orientation</li>
-                        <li>10:00 - 10:30: Explore phase kickoff</li>
-                        <li>10:30 - 3:30: Explore phase work time</li>
+                        <li>10:00 - 10:30: Empathize phase kickoff</li>
+                        <li>10:30 - 3:30: Empathize phase work time</li>
                         <li>11:30 - 2:00: Lunch</li>
                         <li>3:30 - 4:00: Conceptualize phase kickoff</li>
                         <li>5:00 - 7:00: Dinner</li>
