--- a/index.html
+++ b/index.html
@@ -166,12 +166,13 @@
                     <div class="span12 whos-behind sponsors">
                         <h3>Sponsors</h3>
                         <p>
-                            A huge thanks to the organizations making this weekend possible.
+                            <!-- A huge thanks to the organizations making this weekend possible. -->
+                            Sponsors -- the organizations making this event possible.  We're still searching for local design firms and individuals to help finance Rethink Education, so if you have the means to support this endeavor to inspire change in the K-12 system, please consider donating to the cause!  We'd <a class="menu-summary" href="">be glad to talk</a> about what we can offer in return.
                         </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="span4 whos-behind-box-1">
+<!--                     <div class="span4 whos-behind-box-1">
                         <div class="whos-behind-photo">
                             <img src="assets/img/team/1.jpg" alt="">
                             <div class="whos-behind-social">
@@ -220,7 +221,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
                             labore et.
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -233,12 +234,14 @@
 	                <div class="span12 whos-behind mentors">
 	                    <h3>Mentors</h3>
 	                    <p>
-	                    	We've brought some of the greater Boston area's best designers to help you along your way.
+	                    	We'd like to bring some of New England's best designers to help teams along their way.
+                            If you are a professional designer with a passion for education, <a class="menu-summary" href="">let's get in touch</a>!
+                            Whether you can commit two days or two hours of your time, you can help make this event a reality by sharing some of your knowledge and experience. <br>
 	                    </p>
 	                </div>
 	            </div>
 	            <div class="row">
-	                <div class="span4 whos-behind-box-1">
+	                <!-- <div class="span4 whos-behind-box-1">
 	                	<div class="whos-behind-photo">
 	                		<img src="assets/img/team/1.jpg" alt="">
 	                		<div class="whos-behind-social">
@@ -288,7 +291,7 @@
 	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
 	                    	labore et.
 	                    </p>
-	                </div>
+	                </div> -->
 	            </div>
 	        </div>
         </div>
@@ -394,7 +397,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span12 contact">
-                        <h3>Event Summary</h3>
+                        <h3>Event Summary and Contact Info</h3>
                         <p>
                         	
                         </p>
@@ -409,6 +412,7 @@
                         <li>10:00 - 10:30: Empathize phase kickoff</li>
                         <li>10:30 - 3:30: Empathize phase work time</li>
                         <li>11:30 - 2:00: Lunch</li>
+                        <li>12:00 - 5:00: K-12 Students and Teachers on campus</li>
                         <li>3:30 - 4:00: Conceptualize phase kickoff</li>
                         <li>5:00 - 7:00: Dinner</li>
                         <li>4:00 - 9:00: Conceptualize work time</li>
@@ -418,9 +422,9 @@
                         <li>10:30 - 2:00: Develop phase work time</li>
                         <li>11:30 - 2:00: Lunch</li>
                         <li>2:30 - 4:00: Presentations</li>
-                        <li>4:00 - 4:30: Reflections</li>
-                        <li>4:30 - 5:00: Awards</li>
-                        <li>5:00 - 6:00: Mixer</li>
+                        <li>4:00 - 5:00: Reflection and Feedback</li>
+                        <li>5:00 - 5:30: Awards</li>
+                        <li>5:30 - 6:30: Mixer</li>
                     </div>
                     <div class="span5 contact-address">
                         <h4>Event Location</h4>
