--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="span12 subscribe">
                     <h3>Sign up and we'll keep in touch!</h3>
                     <p></p>
-                    <a href=''><button type="submit" class="btn">&nbsp;&nbsp;Register&nbsp;&nbsp;</button></a>
+                    <a href='https://www.eventbrite.com/e/rethink-education-tickets-11999409557'><button type="submit" class="btn">&nbsp;&nbsp;Register&nbsp;&nbsp;</button></a>
                     <div class="success-message"></div>
                     <div class="error-message"></div>
                 </div>
