--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         		<h1><a href="">Rethink Education</a></h1>
                         	</div>
                             <p>
-                                As students at <a id="olin-link" href="http://www.olin.edu/">Olin College of Engineering</a>, we've been at the heart of innovation in post-secondary education.  Now we are bringing together designers, mentors and students of all ages for 2 days to re-envision the K-12 educational system.
+                                  Bringing together designers, mentors, and students of all ages for 2 days to re-envision the K-12 educational system.
                             </p>
                             <div class="timer">
                                 <div class="days-wrapper">
