--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <div class="map"></div>
                         <h4>Address</h4>
                         <p><i class="fa fa-map-marker"></i> 1000 Olin Way, Needham, MA 02492</p>
-                        <p><i class="fa fa-envelope"></i>Email: olin.rethink@gmail.com</p>
+                        <p><i class="fa fa-envelope"></i><a href="mailto:olin.rethink@gmail.com">Email: olin.rethink@gmail.com</a></p>
                     </div>
                 </div>
             </div>
