--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         		<h1><a href="">Rethink Education</a></h1>
                         	</div>
                             <p>
-                                  Bringing together designers, mentors, and students of all ages for 2 days to re-envision the K-12 educational system.
+                                  On September 13th and 14th, we're bringing together designers, mentors, and students of all ages for 2 days to re-envision the K-12 educational system.
                             </p>
                             <div class="timer">
                                 <div class="days-wrapper">
