--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                             <div class="span4 about-box-1">
                                 <h4>What's the cost?</h4>
                                 <p>
-                                   The event is completely free to attend. We'll even feed you and help out with transportation!
+                                   The event costs $20 to help offset the cost of food and design materials.  Trust us, it'll be worth it.
                                 </p>
                             </div>
                             <div class="span4 about-box-1">
